--- a/public/checkout.html
+++ b/public/checkout.html
@@ -8,10 +8,10 @@
   <body>
     <section>
       <div class="product">
-        <img src="https://i.imgur.com/EHyR2nP.png" alt="The cover of Stubborn Attachments" />
+        <img src="https://store.hashicorp.com/cdn/shop/files/image_3213247d-bfbc-49f7-93f9-0c2b082dc4ec_940x.png" alt="Pride Baseball Cap" />
         <div class="description">
-          <h3>Stubborn Attachments</h3>
-          <h5>$12.00</h5>
+          <h3>Pride Baseball Cap</h3>
+          <h5>$22.00</h5>
         </div>
       </div>
       <form action="/create-checkout-session" method="POST">
